--- a/templates/application/pool/pools.twig
+++ b/templates/application/pool/pools.twig
@@ -60,7 +60,7 @@
                                                 {% for deployment in deployment_pools[pool.id] %}
                                                     <li class="mbn">
                                                         {% if server_collisions[deployment.server.id] %}
-                                                            <span class="tooltipped tooltipped-e" aria-label="{{ deployment.path }}">
+                                                            <span class="tooltipped tooltipped-e" aria-label="{{ deployment|formatDeploymentDetails }}">
                                                                 {{ deployment|formatDeploymentServer }}
                                                             </span>
                                                         {% else %}
