--- a/templates/application/deployment/deployments.twig
+++ b/templates/application/deployment/deployments.twig
@@ -44,7 +44,7 @@
                             </td>
                             <td>
                                 {% if deployment.url %}
-                                    <a href="{{ deployment.url.asString() }}">{{ deployment.url.asString() }}</a>
+                                    <a href="{{ deployment.url }}">{{ deployment.url }}</a>
                                 {% endif %}
                             </td>
                             <td class="tr">
