--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -33,7 +33,7 @@
             {% if deployment.url %}
                 <dt class="split__title">URL</dt>
                 <dd>
-                    <a href="{{ deployment.url.asString }}">{{ deployment.url.asString }}</a>
+                    <a href="{{ deployment.url }}">{{ deployment.url }}</a>
                 </dd>
             {% endif %}
         </dl>
