Add deployment name, s3, and credential management

--- a/templates/admin/credentials/credential.twig
+++ b/templates/admin/credentials/credential.twig
@@ -40,7 +40,7 @@
 
     {% endif %}
 
-    <h3>Deployments</h3>
+    <h3>Application Deployments</h3>
     {% if deployments %}
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
@@ -62,7 +62,7 @@
                         {{ deployment.server.environment.name }}
                     </td>
                     <td>
-                        {{ push.deployment|formatDeploymentServer(true) }}
+                        {{ deployment|formatDeploymentServer(true) }}
                     </td>
                     <td class="tr">
                         <a class="btn btn--tiny" href="{{ urlFor('deployment', {application: deployment.application.id, deployment: deployment.id}) }}">View</a>
