--- a/templates/application/pool/pools.twig
+++ b/templates/application/pool/pools.twig
@@ -92,7 +92,7 @@
             <li><a class="btn btn--action" href="{{ urlFor('deployment_view.add', {'application': application.id, 'environment': environment.id}) }}">Add View</a></li>
         {% endif %}
 
-        <li><a class="btn" href="{{ urlFor('deployments', {'application': application.id}) }}">Deployments</a></li>
+        <li><a class="btn" href="{{ urlFor('deployments', {'application': application.id}) }}">Deployment Targets</a></li>
         <li><a class="btn" href="{{ urlFor('application.status', {'application': application.id}) }}">Application Status</a></li>
     </ul>
 
