--- a/templates/server/server.add.twig
+++ b/templates/server/server.add.twig
@@ -64,8 +64,8 @@
                 </li>
 
                 <li>
-                    <label for="hostname">Region</label>
-                    <input type="text" name="hostname" id="hostname" maxlength="60" value="{{ form.hostname }}" class="text-input">
+                    <label for="region">Region</label>
+                    <input type="text" name="region" id="region" maxlength="60" value="{{ form.region }}" class="text-input">
                     <small class="additional">AWS Servers Only</small>
                 </li>
             </ul>
