--- a/sass/base/_tables.scss
+++ b/sass/base/_tables.scss
@@ -94,6 +94,13 @@ th.table-mid-header {
 
 .tablesaw-stack {
 
+    .js-toggle-container {
+        display: none;
+        @include breakpoint(40em) {
+            display: block;
+        }
+    }
+
     .tablesaw-collapse {
         @include breakpoint(40em) {
             display: none;
