--- a/templates/_partial-form/add-deployment.twig
+++ b/templates/_partial-form/add-deployment.twig
@@ -21,12 +21,7 @@ Needs the following parameters:
                         {% for server in servers if not rsync_only or server.type == 'rsync' %}
                             {% set isSelected = (server.id == form.server) %}
 
-                            {% set servername = server.name %}
-                            {% if server.type == 'elasticbeanstalk' %}
-                                {% set servername = 'Elastic Beanstalk' %}
-                            {% elseif server.type == 'ec2' %}
-                                {% set servername = 'EC2' %}
-                            {% endif %}
+                            {% set servername = server|formatServer %}
 
                             <option value="{{ server.id }}"{{ isSelected ? ' selected' : '' }}>{{ servername }}</option>
                         {% endfor %}
@@ -35,20 +30,36 @@ Needs the following parameters:
             </select>
             <small class="additional">
                 Server not listed? <a href="{{ urlFor('server.add') }}">Add a new server</a>
+                {% if rsync_only %}
+                    <br>Need non-rsync servers? <a href="{{ urlFor('deployments.add', {'application': application.id}) }}">Full add deployment form</a>
+                {% endif %}
             </small>
         </li>
+
+        {% if not rsync_only %}
+            <li>
+                <label for="name">Name</label>
+                <input class="text-input" type="text" name="name" id="name" maxlength="80" value="{{ form.name }}" pattern="^[^\n\t]+">
+                <small class="additional">
+                    Optionally, give a deployment a unique name for easy reference or to avoid confusion with multiple deployments to the same server.
+                </small>
+            </li>
+        {% endif %}
+
         <li>
             <label for="path">
                 File path
-                <small class="additional">
-                    {% if not rsync_only %}
-                        <strong>Rsync and EC2 Servers Only</strong><br>
-                    {% endif %}
-                    The absolute path to the file directory on the server.
-                    <br>Paths must begin with a forward slash (/).
-                </small>
+                {% if not rsync_only %}
+                    <small class="additional">
+                            <strong>Rsync and EC2 Servers Only</strong><br>
+                    </small>
+                {% endif %}
             </label>
-            <input class="text-input" type="text" name="path" id="path" maxlength="255" value="{{ form.path }}" pattern="^\/[^\n\t]+">
+            <input class="text-input" type="text" name="path" id="path" maxlength="200" value="{{ form.path }}" pattern="^\/[^\n\t]+">
+            <small class="additional">
+                The absolute path to the file directory on the server.
+                Paths must begin with a forward slash (/).
+            </small>
         </li>
 
         {% if not rsync_only %}
@@ -71,17 +82,39 @@ Needs the following parameters:
                 </label>
                 <input class="text-input" type="text" name="ec2_pool" id="ec2_pool" maxlength="100" value="{{ form.ec2_pool }}" pattern="^[^\n\t]+">
             </li>
+
+            <li>
+                <label for="s3_bucket">
+                    S3 Bucket
+                    <small class="additional">
+                        <strong>S3 Servers Only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="s3_bucket" id="s3_bucket" maxlength="100" value="{{ form.s3_bucket }}" pattern="^[^\n\t]+">
+            </li>
+
+            <li>
+                <label for="s3_file">
+                    S3 File
+                    <small class="additional">
+                        <strong>S3 Servers Only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="s3_file" id="s3_file" maxlength="100" value="{{ form.s3_file }}" pattern="^[^\n\t]+">
+                <small class="additional">
+                    Available placeholders: <code>$BUILDID</code>, <code>$PUSHID</code>, <code>$DATE</code> (YYYY-MM-DD).
+                    <br>Leave blank to use <code>$PUSHID.tar.gz</code>.
+                </small>
+            </li>
         {% endif %}
 
         <li>
-            <label for="url">
-                URL
-                <small class="additional">
-                    A URL is required to help users find where the code is deployed.
-                    <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                </small>
-            </label>
-            <input class="text-input" type="url" name="url" id="url" maxlength="255" value="{{ form.url }}" required>
+            <label for="url">URL</label>
+            <input class="text-input" type="url" name="url" id="url" maxlength="200" value="{{ form.url }}" required>
+            <small class="additional">
+                A URL is required to help users find where the code is deployed.
+                Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
+            </small>
         </li>
     </ul>
 
