--- a/templates/application/deployment/deployments.twig
+++ b/templates/application/deployment/deployments.twig
@@ -28,7 +28,7 @@
             <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
                 <thead>
                     <tr>
-                        <th class="t15">Hostname</th>
+                        <th class="t15">Name</th>
                         <th class="t40">Path</th>
                         <th>URL</th>
                         <th class="t10"></th>
