--- a/templates/server/server.twig
+++ b/templates/server/server.twig
@@ -11,59 +11,58 @@
     <h3>Type</h3>
     <p>{{ server|formatServerType }}</p>
 
-    {% set hostname = (server.type == 'rsync') ? server.name : 'Not applicable' %}
-    <h3>Hostname</h3>
-    <p>{{ hostname }}</p>
+    {% if server.type == 'rsync' %}
+        {% set name_label = 'Hostname' %}
+    {% else %}
+        {% set name_label = 'Region' %}
+    {% endif %}
+    <h3>{{ name_label }}</h3>
+    <p>{{ server.name }}</p>
 
     <h3>Environment</h3>
     <p>{{ server.environment.name }}</p>
 
     <h3>Application Deployment Targets</h3>
-    {% if deployments_with_optional_eb %}
+    {% if deployments %}
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Application</th>
-                    <th>
-                        {% if server.type == 'elasticbeanstalk' %}
-                            EB Environment
-                        {% elseif server.type == 'ec2' %}
-                            EC2 Pool
-                        {% else %}
-                            Path
-                        {% endif %}
-                    </th>
+
                     {% if server.type == 'elasticbeanstalk' %}
-                        <th>Status / Health</th>
+                        <th>EB Environment</th>
+                    {% elseif server.type == 'ec2' %}
+                        <th>EC2 Pool</th>
+                    {% elseif server.type == 's3' %}
+                        <th>Bucket</th>
+                        <th>File</th>
+                    {% else %}
+                        <th>Path</th>
                     {% endif %}
+
                     <th>URL</th>
                     <th class="t10"></th>
                 </tr>
             </thead>
             <tbody>
-            {% for deployment_pair in deployments_with_optional_eb %}
-                {% set deployment = deployment_pair.deployment %}
-                {% set eb_environment = deployment_pair.eb_environment %}
+            {% for deployment in deployments %}
 
                 <tr>
                     <td>
                         <a href="{{ urlFor('application', {application: deployment.application.id}) }}">{{ deployment.application.name }}</a>
                     </td>
-                    <td>
-                        {% if server.type == 'elasticbeanstalk' %}
-                            <code class="code_clear">{{ deployment.ebEnvironment }}</code>
-                        {% elseif server.type == 'ec2' %}
-                            <code class="code_clear">{{ deployment.ec2Pool }}</code>
-                        {% else %}
-                            <code class="code_clear">{{ deployment.path }}</code>
-                        {% endif %}
-                    </td>
+
                     {% if server.type == 'elasticbeanstalk' %}
-                        <td>
-                            {{ eb_environment|formatEBStatus }}
-                            {{ eb_environment|formatEBHealth }}
-                        </td>
+                        <td><code class="code_clear">{{ deployment.ebEnvironment }}</code></td>
+                    {% elseif server.type == 'ec2' %}
+                        <td><code class="code_clear">{{ deployment.ec2Pool }}</code></td>
+                    {% elseif server.type == 's3' %}
+                        <td><code class="code_clear">{{ deployment.s3bucket }}</code></td>
+                        <td><code class="code_clear">{{ deployment.s3file }}</code></td>
+                    {% else %}
+                        <td><code class="code_clear">{{ deployment.path }}</code></td>
                     {% endif %}
+
                     <td>
                         {% if deployment.url %}
                             <a href="{{ deployment.url  }}">{{ deployment.url  }}</a>
@@ -80,7 +79,7 @@
         <p>There are no deployments associated with this server.</p>
     {% endif %}
 
-    {% if isAdmin and deployments_with_optional_eb %}
+    {% if isAdmin and deployments %}
         <p><strong>Note:</strong> All associated deployments must be removed or transferred to remove this server.</p>
     {% endif %}
 
@@ -89,7 +88,7 @@
             <li><a class="btn" href="{{ urlFor('servers') }}">Servers</a></li>
             <li><a class="btn btn--action" href="{{ urlFor('server.edit', {server: server.id}) }}">Edit Server</a></li>
 
-            {% if not deployments_with_optional_eb and isAdmin %}
+            {% if not deployments and isAdmin %}
                 <li><a class="btn btn--destructive" href="{{ urlFor('server.remove', {server: server.id}) }}">Remove Server</a></li>
             {% endif %}
         {% endif %}
