--- a/templates/application/deployment/deployments.edit.twig
+++ b/templates/application/deployment/deployments.edit.twig
@@ -54,7 +54,7 @@
                     <label for="path">
                         File path
                         <small class="additional">
-                            <strong>Rsync and EC2 Servers Only</strong><br>
+                            <strong>Rsync and EC2 servers only</strong><br>
                         </small>
                     </label>
                     <input class="text-input" type="text" name="path" id="path" maxlength="200" value="{{ form.path }}" pattern="^\/[^\n\t]+"{{ isDisabled }}>
@@ -69,7 +69,7 @@
                     <label for="eb_environment">
                         Elastic Beanstalk Environment ID
                         <small class="additional">
-                            <strong>EB Servers Only</strong>
+                            <strong>EB servers only</strong>
                         </small>
                     </label>
                     <input class="text-input" type="text" name="eb_environment" id="eb_environment" maxlength="100" value="{{ form.eb_environment }}" pattern="^[^\n\t]+"{{ isDisabled }}>
@@ -80,28 +80,29 @@
                     <label for="ec2_pool">
                         EC2 Pool
                         <small class="additional">
-                            <strong>EC2 Servers Only</strong>
+                            <strong>EC2 servers only</strong>
                         </small>
                     </label>
                     <input class="text-input" type="text" name="ec2_pool" id="ec2_pool" maxlength="100" value="{{ form.ec2_pool }}" pattern="^[^\n\t]+"{{ isDisabled }}>
                 </li>
 
-                {% set isDisabled = (deployment.server.type == 's3') ? '' : ' disabled' %}
+                {% set isDisabled = (deployment.server.type in ['s3', 'elasticbeanstalk']) ? '' : ' disabled' %}
                 <li>
                     <label for="s3_bucket">
                         S3 Bucket
                         <small class="additional">
-                            <strong>S3 Servers Only</strong>
+                            <strong>S3 and EB servers only</strong>
                         </small>
                     </label>
                     <input class="text-input" type="text" name="s3_bucket" id="s3_bucket" maxlength="100" value="{{ form.s3_bucket }}" pattern="^[^\n\t]+"{{ isDisabled }}>
                 </li>
 
+                {% set isDisabled = (deployment.server.type == 's3') ? '' : ' disabled' %}
                 <li>
                     <label for="s3_file">
                         S3 File
                         <small class="additional">
-                            <strong>S3 Servers Only</strong>
+                            <strong>S3 servers only</strong>
                         </small>
                     </label>
                     <input class="text-input" type="text" name="s3_file" id="s3_file" maxlength="100" value="{{ form.s3_file }}" pattern="^[^\n\t]+"{{ isDisabled }}>
