--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -48,6 +48,11 @@
             </a>
         </li>
         <li>
+            <a href="{{ urlFor('admin.credentials') }}" class="btn btn--primary">
+                {{ macros.icon('locked') }} Credentials
+            </a>
+        </li>
+        <li>
             <a href="{{ urlFor('admin.audit.logs.page1') }}" class="btn btn--primary">
                 {{ macros.icon('watch') }} Audit Logs
             </a>
