--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -24,7 +24,7 @@
 
             <dt class="split__title">Server</dt>
             <dd>
-                <a href="{{ urlFor('server', {'id': deployment.server.id}) }}">{{ server }}</a>
+                <a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ server }}</a>
             </dd>
 
             <dt class="split__title">{{ deployment_label }}</dt>
