--- a/templates/application/deployment/deployment.twig
+++ b/templates/application/deployment/deployment.twig
@@ -11,11 +11,11 @@
         <dl class="split">
             <dt class="split__title">Application</dt>
             <dd>
-                <a href="{{ urlFor('application', {application: deployment.application.id}) }}">{{ deployment.application.name }}</a>
+                <a href="{{ urlFor('application', {'application': deployment.application.id}) }}">{{ deployment.application.name }}</a>
             </dd>
 
             <dt class="split__title">Server</dt>
-            <dd><a href="{{ urlFor('server', {id: deployment.server.id}) }}">{{ deployment|formatDeploymentServer(true) }}</a></dd>
+            <dd><a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ deployment|formatDeploymentServer(true) }}</a></dd>
 
             <dt class="split__title">Environment</dt>
             <dd>
@@ -27,52 +27,51 @@
     <h4>Type</h4>
     <p>{{ deployment.server|formatServerType }}</p>
 
-    <h4>File path</h4>
-    <p>
-        {% if deployment.server.type == 'rsync' or deployment.server.type == 'ec2' %}
-            <code>{{ deployment.path }}</code>
+    {% if deployment.server.type == 'rsync' %}
+
+        <h4>File path</h4>
+        <p><code>{{ deployment.path }}</code></p>
+
+    {% elseif deployment.server.type == 'ec2' %}
+
+        <h4>File path</h4>
+        <p><code>{{ deployment.path }}</code></p>
+
+        <h4>EC2 Pool</h4>
+        <p><code>{{ deployment.ec2pool }}</code></p>
+
+    {% elseif deployment.server.type == 'elasticbeanstalk' %}
+
+        {% if eb_environment %}
+            <h4 class="mbn"><strong>EB Application ID</strong></h4>
+            <p>{{ eb_environment.id }}</p>
+
+            <h4 class="mbn"><strong>EB Application Name</strong></h4>
+            <p>{{ eb_environment.name }}</p>
+
+            <h4 class="mbn"><strong>EB Status and Health</strong></h4>
+            <p class="mbn">Status: {{ eb_environment|formatEBStatus }}</p>
+            <p>Health: {{ eb_environment|formatEBHealth }}</p>
+
+            <h4 class="mbn"><strong>EB Solution</strong></h4>
+            <p>{{ eb_environment.solution }}</p>
+
+            <h4 class="mbn"><strong>EB Application URL</strong></h4>
+            <p><a href="http://{{ eb_environment.url }}">{{ eb_environment.url }}</a></p>
         {% else %}
-            Not Applicable
+            <h4>Elastic Beanstalk Environment ID</h4>
+            <p><code>{{ deployment.ebEnvironment }}</code></p>
         {% endif %}
-    </p>
 
-    {% if deployment.server.type == 'elasticbeanstalk' and eb_environment %}
-        <h4>Elastic Beanstalk</h4>
+    {% elseif deployment.server.type == 's3' %}
 
-        <h5 class="mbn"><strong>EB Application ID</strong></h5>
-        <p>{{ eb_environment.id }}</p>
+        <h4>S3 Bucket</h4>
+        <p><code>{{ deployment.s3bucket }}</code></p>
 
-        <h5 class="mbn"><strong>EB Application Name</strong></h5>
-        <p>{{ eb_environment.name }}</p>
+        <h4>S3 File</h4>
+        <p><code>{{ deployment.s3file ?: '$pushid.tar.gz' }}</code></p>
 
-        <h5 class="mbn"><strong>EB Status and Health</strong></h5>
-        <p class="mbn">Status: {{ eb_environment|formatEBStatus }}</p>
-        <p>Health: {{ eb_environment|formatEBHealth }}</p>
-
-        <h5 class="mbn"><strong>EB Solution</strong></h5>
-        <p>{{ eb_environment.solution }}</p>
-
-        <h5 class="mbn"><strong>EB Application URL</strong></h5>
-        <p><a href="http://{{ eb_environment.url }}">{{ eb_environment.url }}</a></p>
-    {% else %}
-        <h4>Elastic Beanstalk Environment ID</h4>
-        <p>
-            {% if deployment.server.type == 'elasticbeanstalk' %}
-                <code>{{ deployment.ebEnvironment }}</code>
-            {% else %}
-                Not Applicable
-            {% endif %}
-        </p>
     {% endif %}
-
-    <h4>EC2 Pool</h4>
-    <p>
-        {% if deployment.server.type == 'ec2' %}
-            <code>{{ deployment.ec2Pool }}</code>
-        {% else %}
-            Not Applicable
-        {% endif %}
-    </p>
 
     <h4>URL</h4>
     <p>
