--- a/templates/application/status.twig
+++ b/templates/application/status.twig
@@ -222,7 +222,7 @@
     <article class="card card--{{ deployment.server.environment.name }}">
         <header class="card__header">
             <h4>
-                <a href="{{ urlFor('server', {'id': deployment.server.id}) }}">{{ deployment|formatDeploymentServer }}</a>
+                <a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ deployment|formatDeploymentServer }}</a>
 
                 {% if deployment.url %}
                     <a class="icon--link" href="{{ deployment.url }}">
