--- a/templates/server/server.add.twig
+++ b/templates/server/server.add.twig
@@ -32,6 +32,12 @@
                             <input id="server_type-ec2" type="radio" name="server_type" value="ec2"{{ checked }}>
                             <label for="server_type-ec2">EC2</label>
                         </li>
+
+                        {% set checked = form.server_type == 's3' ? ' checked' : '' %}
+                        <li>
+                            <input id="server_type-s3" type="radio" name="server_type" value="s3"{{ checked }}>
+                            <label for="server_type-s3">S3</label>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -53,10 +59,14 @@
 
                 <li>
                     <label for="hostname">Hostname</label>
-                    <small class="additional">
-                        <strong>Rsync Servers Only</strong>
-                    </small>
                     <input type="text" name="hostname" id="hostname" maxlength="60" value="{{ form.hostname }}" class="text-input">
+                    <small class="additional">Rsync Servers Only</small>
+                </li>
+
+                <li>
+                    <label for="hostname">Region</label>
+                    <input type="text" name="hostname" id="hostname" maxlength="60" value="{{ form.hostname }}" class="text-input">
+                    <small class="additional">AWS Servers Only</small>
                 </li>
             </ul>
 
