--- a/templates/server/server.twig
+++ b/templates/server/server.twig
@@ -87,10 +87,10 @@
     <ul class="button-list button-list--half">
         {% if isAdmin %}
             <li><a class="btn" href="{{ urlFor('servers') }}">Servers</a></li>
-            <li><a class="btn btn--action" href="{{ urlFor('server.edit', {id: server.id}) }}">Edit Server</a></li>
+            <li><a class="btn btn--action" href="{{ urlFor('server.edit', {server: server.id}) }}">Edit Server</a></li>
 
             {% if not deployments_with_optional_eb and isAdmin %}
-                <li><a class="btn btn--destructive" href="{{ urlFor('server.remove', {id: server.id}) }}">Remove Server</a></li>
+                <li><a class="btn btn--destructive" href="{{ urlFor('server.remove', {server: server.id}) }}">Remove Server</a></li>
             {% endif %}
         {% endif %}
     </ul>
