Add dynamic favicon updating on build/push pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,12 +15,9 @@
             </title>
             {% endblock %}
             {% block page_icon %}
-                <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
-                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
-                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
-                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="114x114" href="/hal-114px.png"> <!-- for apple -->
-                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="144x144" href="/hal-144px.png"> <!-- for apple -->
-                <link type="image/png" rel="icon" href="/hal.png"> <!-- for the rest of the world -->
+                <!-- <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> -->
+                <!-- <link type="image/png" rel="icon" href="/hal.png"> -->
+                <link type="image/png" rel="shortcut icon" href="/hal.ico">
             {% endblock %}
             {% block page_meta %}
                 <meta name="format-detection" content="telephone=no">
